# PX4_GDP

./: log  readme.md  sensors.rviz
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_simple/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/cv_bridge/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/data_writer/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/drone_lib/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/follower/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/gazebo_listener/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/geographiclibtest/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/imu_data/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/imu_data_reader/: .rosinstall  local_setup.sh  setup.sh
devel/.private/jakecode/: .rosinstall  local_setup.sh  setup.sh
devel/.private/libmavconn/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/lidar_converter/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mavros/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mavros_extras/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mavros_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/moving_gps_target/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mypkg/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/offb/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/offb_gpsfollower/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/offb_velocity/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/px4/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rgbcam/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rgbcam_gazebo/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/.private/teraranger_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/teraranger_listener/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/test_mavros/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/testbot_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/three_d_cam/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/tianisawesome/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/vishnu_cam/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/mavros_msgs/: ADSBVehicle.h  ActuatorControl.h  Altitude.h  AttitudeTarget.h  BatteryStatus.h  CamIMUStamp.h  CommandBool.h  CommandBoolRequest.h  CommandBoolResponse.h  CommandCode.h  CommandHome.h  CommandHomeRequest.h  CommandHomeResponse.h  CommandInt.h  CommandIntRequest.h  CommandIntResponse.h  CommandLong.h  CommandLongRequest.h  CommandLongResponse.h  CommandTOL.h  CommandTOLRequest.h  CommandTOLResponse.h  CommandTriggerControl.h  CommandTriggerControlRequest.h  CommandTriggerControlResponse.h  CommandTriggerInterval.h  CompanionProcessStatus.h  (+118 more)
devel/lib/: examples__dyn_hello.px4mod
gazeboplugins/: readme.txt
gazeboplugins/ActorCollisionPlugin/: CMakeLists.txt
gazeboplugins/model_movement/: CMakeLists.txt  model_mover.cc
gazeboplugins/model_mover/: CMakeLists.txt  model_mover.cc
src/: .rosinstall  .rosinstall.bak  CMakeLists.txt  README.md  README.txt
src/cv_bridge/: CMakeLists.txt
src/data_writer/: CMakeLists.txt  package.xml
src/data_writer/src/: data_writer.cpp
src/drone_lib/: .gitignore  CMakeLists.txt  DON'T README  package.xml
src/follower/: gazebonodes.launch  gpstarget.launch  nodes.launch
src/gazebo_listener/: CMakeLists.txt
src/gazebo_listener/include/: p.h
src/gazebo_listener/src/: gazebo_listener.cpp
src/imu_data/: CMakeLists.txt
src/lidar_converter/: CMakeLists.txt  package.xml
src/lidar_converter/src/: lidar_converter.cpp
src/moving_gps_target/: CMakeLists.txt  package.xml
src/moving_gps_target/src/: moving_gps_target.cc
src/mypkg/: CMakeLists.txt  package.xml
src/offb/: package.xml
src/offb_gpsfollower/: CMakeLists.txt  package.xml
src/offb_gpsfollower/include/: drone_offboard.h
src/offb_gpsfollower/src/: drone_offboard.cpp  offb_gpsfollower.cpp
src/offb_velocity/: CMakeLists.txt  package.xml
src/rgbcam/: CMakeLists.txt  package.xml
src/rgbcam_gazebo/: CMakeLists.txt  package.xml
src/rgbcam_gazebo/src/: CMakeLists.txt  image_converter.cpp  main.2.cpp  main.cpp  main.gazebo.cpp  main_gazebo.cpp  main_ros.cpp
src/rgbcam_gazebo/src/agent-xb/: AgentXB.cpp  AgentXB.h  SMA.hpp
src/rgbcam_gazebo/src/camera-calibration/: .gitignore  CMakeLists.txt  CVCalibration.cpp  CVCalibration.h  main.cpp
src/rgbcam_gazebo/src/data/: CalibParams.1080.txt  CalibParams.640.txt  CalibParams.logi.txt  CalibParams.logi2.txt  tracker_config.yml
src/rgbcam_gazebo/src/tracker-arb/: TrackerARB.cpp  TrackerARB.h  create_board.cpp
src/rgbcam_gazebo/src/tracker-base/: CMakeLists.txt  Tracker.cpp  Tracker.h
src/rgbcam_gazebo/src/tracker-hsv/: CMakeLists.txt  TrackerHSV.cpp  TrackerHSV.h
src/teraranger_listener/: CMakeLists.txt  package.xml
src/three_d_cam/: CMakeLists.txt  package.xml
src/vishnu_cam/: .gitmodules  CMakeLists.txt  readme.md
src/vishnu_cam/src/: .gitignore  .gitmodules  CMakeLists.txt  kalman_tracker.cpp  main.2.cpp  main.cpp  main.gazebo.cpp  main.ros.cpp  main_gazebo.cpp  main_ros.cpp  morphology.cpp  squares.cpp
src/vishnu_cam/src/camera-calibration/: CVCalibration.h  Readme.md
src/vishnu_cam/src/tracker-ar/: CMakeLists.txt  TrackerAR.cpp  TrackerAR.h
src/vishnu_cam/src/tracker-arb/: CMakeLists.txt  TrackerARB.cpp  TrackerARB.h  create_board.cpp
src/vishnu_cam/src/tracker-base/: Tracker.cpp  Tracker.h
src/vishnu_cam/src/tracker-canny/: TrackerCanny.cpp  TrackerCanny.h
(+966 files in other folders)
